# fastapi-mcp-example

./: README.md  pyproject.toml
src/: main.py
src/router/: calc.py  google_calendar.py  google_tasks.py
src/schemas/: google_calendar.py  google_tasks.py
