[project]
name = "mcp-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Theedon",email = "faniyantoyin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "fastapi-mcp (>=0.3.4,<0.4.0)",
    "google-api-python-client (>=2.174.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
